# ai-workflow

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.dev  README.md  README.zh-CN.md  desktop.go  desktop_app.go  findings.md  go.mod  go.sum  harness-progress.txt  harness-tasks.json  package-lock.json  package.json  pencil-new.pen  progress.md  skills-lock.json  task_plan.md  wails.json
.claude/: settings.local.json
.github/workflows/: ci.yml  wails-windows.yml
archive-src/legacy-backend/: README.md  go.mod
cmd/acp-probe/: bootstrap_test.go  capture_test.go  loadsession_test.go  main.go  thread_workspace_real_test.go  versions.go
cmd/acp-smoke/: main.go
cmd/ai-flow/: adapters.go  cmd_executor.go  commands.go  commands_config.go  commands_config_test.go  commands_github_replay.go  commands_github_validate_test.go  commands_mcp.go  commands_test.go  main.go  main_test.go  orchestrate_cmd.go  root.go  server.go  server_handlers.go  upgrade_exec_unix.go  upgrade_exec_windows.go  v2_bootstrap.go  v2_bootstrap_helpers.go
cmd/gen-schema/: main.go
cmd/viking/: main.go  main_test.go
configs/: config-schema.json  defaults.yaml
docs/: e2e-testing-guide.md
scripts/: dev.sh  docker-build.ps1  update-a2a-protocol.ps1  update-agent-client-protocol.ps1  update-github-repo.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: .env.example  .gitignore  eslint.config.js  package-lock.json  package.json  package.json.md5  tailwind.config.ts  tsconfig.app.json  vite.config.ts
(+947 files in other folders)
