[package]
name = "ai-workflow-desktop"
version = "0.1.0"
description = "AI Workflow Desktop (Tauri + Go backend + React frontend)"
authors = ["ai-workflow contributors"]
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
toml = "0.8"
